Update page - vaccines.html a685ec100522031d3251ce54a2608b5217fd1737

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;April 8, 2021 at 2:58 PM</p>
+            <p class="small-text">Last updated&nbsp;April 9, 2021 at 7:08 PM</p>
           
         </div>
       </div>
@@ -191,6 +191,10 @@
 
 
 <ul class="toc"><li><strong><a href="#California's-vaccination-plan">When you can get vaccinated</a></strong></li><li><strong><a href="#How-to-get-vaccinated">How to get vaccinated</a></strong></li><li><strong><a href="#How-vaccines-work">How vaccines work</a></strong></li><li><strong><a href="#What-to-expect-after-vaccination">What to expect after vaccination</a></strong></li><li><strong><a href="#Spread-the-news-about-COVID-19-vaccines">Spread the news about the vaccines</a></strong></li><li><strong><a href="#California-vaccines-dashboard">Vaccination progress dashboards</a></strong></li><li><strong><a href="#Questions-and-answers">Questions and answers</a></strong></li></ul>
+
+
+
+<hr class="wp-block-separator bd-top-darkblue" id="California's-vaccination-plan"/>
 
 
 
@@ -426,6 +430,10 @@
 
 
 
+<hr class="wp-block-separator bd-top-darkblue" id="How-to-get-vaccinated"/>
+
+
+
 <h2 id="How-to-get-vaccinated">How to get vaccinated</h2>
 
 
@@ -515,7 +523,11 @@
 
 
 
-<h2 id="How-vaccines-work">How vaccines work</h2>
+<hr class="wp-block-separator bd-top-darkblue" id="How-vaccines-work"/>
+
+
+
+<h2>How vaccines work</h2>
 
 
 
@@ -607,6 +619,10 @@
 
 
 
+<hr class="wp-block-separator bd-top-darkblue" id="What-to-expect-after-vaccination"/>
+
+
+
 <h2>What to expect after vaccination</h2>
 
 
@@ -631,7 +647,11 @@
 
 
 
-<h2 id="Spread-the-news-about-COVID-19-vaccines">Spread the news about the vaccines</h2>
+<hr class="wp-block-separator bd-top-darkblue" id="Spread-the-news-about-COVID-19-vaccines"/>
+
+
+
+<h2>Spread the news about the vaccines</h2>
 
 
 
@@ -653,7 +673,11 @@
 
 
 
-<h2 id="California-vaccines-dashboard">Vaccination progress dashboards</h2>
+<hr class="wp-block-separator bd-top-darkblue" id="California-vaccines-dashboard"/>
+
+
+
+<h2>Vaccination progress dashboards</h2>
 
 
 
@@ -661,11 +685,19 @@
 
 
 
+<p>Early vaccinations targeted people at higher risk due to exposure, pre-existing health conditions, or age. Hence vaccinations data will reflect mostly those groups rather than mirror the overall California population.</p>
+
+
+
 <h3 id="Vaccine-administration-by-county-of-residence">Vaccine administration by county of residence</h3>
 
 
 
-<p>This dashboard reports vaccines administered by the county of residence. Where the county of residence was not reported, the county where vaccinated is used. This applies to less than 1% of vaccination records. The sum of county-level vaccinations does not equal statewide total vaccinations because some out-of-state residents are vaccinated in California.</p>
+<p>This dashboard reports vaccines administered by the county of residence. Statewide vaccines administered combine all the county numbers. The vaccine doses administered under the federal pharmacy program are not included in the statewide count. This program provides vaccines directly to the pharmacy and are counted as part of the overall doses delivered to the state.&nbsp;</p>
+
+
+
+<p>Partially-vaccinated people are those receiving only one dose of the Pfizer or Moderna vaccine. Fully-vaccinated people are those who received two doses of the Pfizer or Moderna vaccines or the Janssen vaccine.</p>
 
 
 
@@ -681,15 +713,23 @@
 
 
 
+<p class="small-text">Where the county of residence was not reported, the county where vaccinated is used. This applies to less than 1% of vaccination records. The sum of county-level vaccinations does not equal statewide total vaccinations because some out-of-state residents are vaccinated in California.</p>
+
+
+
 <h3>Vaccination and community health conditions (Vaccine Equity Metric)</h3>
 
 
 
-<p>These graphs compare COVID-19 vaccinations among four different levels of community health.</p>
+<p>These graphs compare COVID-19 vaccinations among four different levels of community health.&nbsp;</p>
 
 
 
-<p>The Vaccine Equity Metric combines the Public Health Alliance of Southern California’s Healthy Places Index (HPI) measure with CDPH-derived scores to estimate factors that impact health, like income, education, and access to health care. Zip codes range from less healthy community conditions in Quartile 1 to more healthy community conditions in Quartile 4.</p>
+<p>The California Healthy Places Index (HPI), developed by the Public Health Alliance of Southern California, explores local factors that predict life expectancy and compares community conditions across the state. The HPI quartiles are the total state population divided into 25% segments based on conditions that shape health, like housing, transportation, education, and more.&nbsp;</p>
+
+
+
+<p>The Vaccine Equity Metric (VEM) combines HPI with CDPH-derived scores. Zip codes range from less healthy community conditions in Quartile 1 to more healthy community conditions in Quartile 4.</p>
 
 
 
@@ -750,11 +790,7 @@
 
 
 
-<p>The distribution of first vaccine doses by race and ethnicity, age, and gender is shown below. Providing this information is voluntary and not required for vaccination.&nbsp;</p>
-
-
-
-<p>Data shows the cumulative total administered.</p>
+<p>The distribution so far of first vaccine doses by race and ethnicity, age, and gender is shown below. Providing this information is voluntary and not required for vaccination.</p>
 
 
 
@@ -1337,7 +1373,7 @@
 
 
 
-<h3 id="What-to-expect-after-vaccination">What to expect after vaccination</h3>
+<h3 id="What-to-expect-after-vaccination-QA">What to expect after vaccination</h3>
 
 
 
@@ -1810,6 +1846,10 @@
 
 
 
+
+
+
+<hr class="wp-block-separator bd-top-darkblue"/>
 
 
 
