--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						Details about this data are available in the <a class="hero-stats-footer-slink" href="/state-dashboard/">state dashboard</a>.
+						The number of new cases and tests reported today include some cases and tests from prior months that were not previously reported. Details about this data are available in the <a class="hero-stats-footer-slink" href="/state-dashboard/">state dashboard</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
