--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Abril 10, 2021 sa 9:36 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Abril 10, 2021 sa 1:46 PM</p>
           
         </div>
       </div>
