--- a/ar/state-dashboard/index.html
+++ b/ar/state-dashboard/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>تعقب المصابين بكوفيد-19 في كاليفورنيا</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;10:00 ص الساعة 10 أبريل 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;10:00 ص الساعة 11 أبريل 2021</p>
           
         </div>
       </div>
@@ -165,8 +165,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">تحديث بخصوص 10 أبريل 2021</h2>
-        <p>اعتبارًا من 10 أبريل 2021، وقد قامت ولاية كاليفورنيا 3,595,224 بتأكيد الحالات المصابة بكوفيد-19 التي نتج عنها 59,113 وفيات.</p>
+        <h2 class="text-center color-purple">تحديث بخصوص 11 أبريل 2021</h2>
+        <p>اعتبارًا من 11 أبريل 2021، وقد قامت ولاية كاليفورنيا 3,600,178 بتأكيد الحالات المصابة بكوفيد-19 التي نتج عنها 59,218 وفيات.</p>
       </div>
     </div>
 
@@ -175,8 +175,8 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">الحالات</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,595,224</strong> <span class="text-300">إجمالي</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>4,466</strong> <span class="text-300">اليوم</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,600,178</strong> <span class="text-300">إجمالي</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>4,954</strong> <span class="text-300">اليوم</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up1" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -190,8 +190,8 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">الوفيات</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>59,113</strong> <span class="text-300">إجمالي</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>170</strong> <span class="text-300">اليوم</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>59,218</strong> <span class="text-300">إجمالي</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>105</strong> <span class="text-300">اليوم</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up2" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -205,29 +205,29 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">الاختبارات</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>56,078,860</strong> <span class="text-300">إجمالي</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>216,028</strong> <span class="text-300">اليوم</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>56,363,675</strong> <span class="text-300">إجمالي</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>239,453</strong> <span class="text-300">اليوم</span>           </div>
           <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up3" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg id="arrow-down3" class="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 1.7النسبة المئوية <span class="text-300">لإيجابية الاختبارات</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 1.6النسبة المئوية <span class="text-300">لإيجابية الاختبارات</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">اللقاحات المعطاة</div>
 
-          <div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>22,501,294</strong> <span class="text-300">إجمالي</span>           </div>           
+          <div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>22,777,893</strong> <span class="text-300">إجمالي</span>           </div>           
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">محدثة 10 أبريل 2021، ببيانات من 9 أبريل 2021.</p>
+        <p class="small-text">محدثة 11 أبريل 2021، ببيانات من 10 أبريل 2021.</p>
 
         <p class="small-text">ملاحظة: يستند معدل الإصابات على متوسط 7 أيام مع تأخر 7 أيام. وتستند معدلات الوفيات إلى متوسط قدره 7 أيام مع تأخر قدره 21 يومًا بسبب التأخر في الإبلاغ. ويستند اختبار الإيجابية على متوسط 7 أيام مع عدم وجود تأخير. ويقارن التغير في الاتجاه بفترة السبعة أيام السابقة. تقوم إدارة الصحة العامة بكاليفورنيا بتوفير البيانات.</p>
       </div>
@@ -271,7 +271,7 @@
 
 
 
-<p>وقد قامت ولاية كاليفورنيا 3,595,224 بتأكيد الحالات المصابة بكوفيد-19 التي نتج عنها 59,113 وفيات.</p>
+<p>وقد قامت ولاية كاليفورنيا 3,600,178 بتأكيد الحالات المصابة بكوفيد-19 التي نتج عنها 59,218 وفيات.</p>
 
 
 
@@ -306,7 +306,7 @@
 
 
 
-<p>وصل عدد نتائج الاختبارات التشخيصية لكوفيد-19 في كاليفورنيا إلى ما مجموعه 56,078,860، الزيادة في 216,028 الاختبارات عن مجموع اليوم السابق. معدل الاختبارات الإيجابية خلال الأيام 7 الماضية هو ⁦1.7⁩٪.</p>
+<p>وصل عدد نتائج الاختبارات التشخيصية لكوفيد-19 في كاليفورنيا إلى ما مجموعه 56,363,675، الزيادة في 239,453 الاختبارات عن مجموع اليوم السابق. معدل الاختبارات الإيجابية خلال الأيام 7 الماضية هو ⁦1.6⁩٪.</p>
 
 
 
@@ -341,7 +341,7 @@
 
 
 
-<p>وداخل مستشفيات كاليفورنيا بلغ عدد الحالات التي يتم علاجها من كوفيد-19 سواء مؤكدة أو مشتبه فيها ما مجموعه 2,170، an increase of 13 من مجموع اليوم السابق. وداخل مستشفيات كاليفورنيا بلغ عدد مرضى وحدات العناية المركزة الذين يُعالجون من كوفيد-19 سواء كانت إصابتهم مؤكدة أو مشتبه فيها ما مجموعه 491، a decrease of 27 من مجموع اليوم السابق.</p>
+<p>وداخل مستشفيات كاليفورنيا بلغ عدد الحالات التي يتم علاجها من كوفيد-19 سواء مؤكدة أو مشتبه فيها ما مجموعه 2,123، a decrease of 47 من مجموع اليوم السابق. وداخل مستشفيات كاليفورنيا بلغ عدد مرضى وحدات العناية المركزة الذين يُعالجون من كوفيد-19 سواء كانت إصابتهم مؤكدة أو مشتبه فيها ما مجموعه 469، a decrease of 22 من مجموع اليوم السابق.</p>
 
 
 
