--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;April 10, 2021 at 1:46 PM</p>
+            <p class="small-text">Last updated&nbsp;April 11, 2021 at 9:19 AM</p>
           
         </div>
       </div>
