--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برامج تخطيطية لاقتصاد أكثر أمانا</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:24 ص الساعة 11 أبريل 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:36 م الساعة 11 أبريل 2021</p>
           
         </div>
       </div>
