--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;April 11, 2021 at 9:24 AM</p>
+            <p class="small-text">Last updated&nbsp;April 11, 2021 at 1:36 PM</p>
           
         </div>
       </div>
