--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年4月11日, 上午9:24</p>
+            <p class="small-text">最近更新&nbsp;2021年4月11日, 下午1:36</p>
           
         </div>
       </div>
