Update translation - 105850403 (#4070) 174bcbd2ffc283f1d573ab00d3ca9755108df3ad

--- a/vi/industry-guidance/index.html
+++ b/vi/industry-guidance/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hướng dẫn cho từng ngành nghề để giảm nhẹ rủi ro</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;7 tháng 4, 2021 lúc 16:58</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;9 tháng 4, 2021 lúc 11:47</p>
           
         </div>
       </div>
@@ -849,7 +849,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-hair-salons--vi.pdf" title="mở tài liệu PDF hướng dẫn dành cho các tiệm cắt tóc và tiệm làm tóc.">dành cho các tiệm làm tóc và tiệm cắt tóc</a> này để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng. Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-hair-salons--vi.pdf">danh mục kiểm tra dành cho các tiệm làm tóc</a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm được nguy cơ và mở cửa kinh doanh trở lại. </p>
+            <p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-hair-salons--vi.pdf" title="mở tài liệu PDF hướng dẫn dành cho các tiệm cắt tóc và tiệm làm tóc.">dành cho các tiệm làm tóc và tiệm cắt tóc</a> này để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng. Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-hair-salons--vi.pdf">danh mục kiểm tra dành cho các tiệm làm tóc</a> tại cơ sở làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm được nguy cơ và sẽ mở cửa kinh doanh trở lại. </p>
 
                   </div>
                 </div>
@@ -867,7 +867,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h3 id="higher-education"><span class="ca-gov-icon-read-book"></span> Giáo dục đại học – cập nhật ngày 1 tháng 10 năm 2020</h3>
+            <h3 id="higher-education"><span class="ca-gov-icon-read-book"></span> Giáo dục đại học – cập nhật ngày 9 tháng 4 năm 2020</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -881,7 +881,10 @@
 <ul><li>Phải giới hạn các buổi giảng dạy trên lớp và các buổi tập trung học sinh ở 50% sức chứa hoặc 200 người, tùy theo số lượng nào ít hơn</li><li>Một số lớp học được diễn ra trong những bối cảnh trong nhà nhất định, như phòng thí nghiệm và studio nghệ thuật, có thể được phép mở cửa với sức chứa thông thường</li><li>Tổ chức các hoạt động dành cho học sinh trực tuyến khi có thể</li></ul>
 <p>Tối thiểu (màu vàng)</p>
 <ul><li>Phải giới hạn các buổi giảng dạy trên lớp và các buổi tập trung học sinh ở 50% sức chứa</li><li>Một số lớp học được diễn ra trong những bối cảnh trong nhà nhất định, như phòng thí nghiệm và studio nghệ thuật, có thể được phép mở cửa với sức chứa thông thường</li><li>Tổ chức các hoạt động dành cho học sinh trực tuyến khi có thể</li></ul>
-<p><a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--vi.pdf">Hướng dẫn tạm thời dành cho các tổ chức giáo dục đại học</a> này đưa ra hướng dẫn giúp các tổ chức và cộng đồng của họ lập kế hoạch và chuẩn bị để tiếp tục hoạt động giảng dạy trên lớp. Trong đó bao gồm hướng dẫn tạm thời cho hoạt động thể thao sinh viên để giúp lập kế hoạch và chuẩn bị tiếp tục tập luyện và thi đấu. Xem hướng dẫn và lập kế hoạch để giảm nguy cơ và hỗ trợ môi trường an toàn hơn cho sinh viên, đội ngũ giảng dạy, nhân viên và các gia đình.</p>
+<p><a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--vi.pdf">Hướng dẫn tạm thời dành cho các tổ chức giáo dục đại học</a> này đưa ra hướng dẫn giúp các tổ chức và cộng đồng của họ lập kế hoạch và chuẩn bị để tiếp tục hoạt động giảng dạy trên lớp. Trong đó bao gồm hướng dẫn tạm thời cho hoạt động thể thao sinh viên để giúp lập kế hoạch và chuẩn bị tiếp tục tập luyện và thi đấu. Xem hướng dẫn và lập kế hoạch để giảm thiểu nguy cơ và cung cấp một môi trường an toàn hơn cho sinh viên, đội ngũ giảng dạy, nhân viên và các gia đình.</p>
+<p><strong>Khán giả của các hoạt động thể thao sinh viên </strong></p>
+<p>Cho phép khán giả tham gia các hoạt động thể thao sinh viên ngoài trời được cho phép theo <a href="/vi/industry-guidance/#live-performances">hướng dẫn dành cho các sự kiện và buổi biểu diễn trực tiếp ngoài trời</a>. </p>
+<p>Bắt đầu từ ngày 15 tháng 4 năm 2021, các khán giả sẽ được phép xem các hoạt động thể thao sinh viên trong nhà. Hướng dẫn này sắp được ban hành. Hãy tìm hiểu các thay đổi sắp tới bằng cách xem <em>Các Sự Kiện và Buổi Biểu Diễn Trực Tiếp Có Khán Giả Ngồi Xem Trong Nhà</em> trong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Dimmer-Framework-September_2020.pdf">bảng cấp kinh doanh và hoạt động</a> của CDPH. Hướng dẫn tạm thời dành cho các tổ chức giáo dục đại học sẽ được cập nhật để bao gồm những thay đổi này.</p>
 
                   </div>
                 </div>
@@ -931,7 +934,19 @@
 
 
 
-<div style="display:none;" class="js-qa js-qa-question">Thể thao sinh viên có được phép hoạt động không?</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div style="display:none;" class="js-qa js-qa-question">Các hoạt động thể thao sinh viên có được phép tổ chức không?</div>
 <div style="display:none;" class="js-qa js-qa-answer">Trong <a href="/vi/industry-guidance/#higher-education">hướng dẫn tạm thời cho giáo dục đại học</a> có hướng dẫn để hoạt động thể thao sinh viên tiếp tục tập luyện và thi đấu. </div>
 
 
