--- a/tl/industry-guidance/index.html
+++ b/tl/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Gabay sa industriya para mabawasan ang panganib</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Abril 7, 2021 sa 4:58 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Abril 9, 2021 sa 11:47 AM</p>
           
         </div>
       </div>
@@ -847,7 +847,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-hair-salons--tl.pdf" title="buksan ang gabay para sa mga hair salon at barbershop">gabay para sa mga hair salon at barbershop</a> na ito para suportahan ang isang ligtas at malinis na kapaligiran para sa mga manggagawa at customer. Suriin ang gabay, maghanda ng plano, at ipaskil ang <a href="https://files.covid19.ca.gov/pdf/checklist-hair-salons--tl.pdf">checklist para sa hair salon</a> sa iyong lugar ng trabaho upang ipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na upang magnegosyo. </p>
+            <p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-hair-salons--tl.pdf" title="buksan ang gabay para sa mga hair salon at barbershop">gabay para sa mga hair salon at barbershop</a> na ito para suportahan ang isang ligtas at malinis na kapaligiran para sa mga manggagawa at customer. Suriin ang gabay, maghanda ng plano, at ipaskil ang <a href="https://files.covid19.ca.gov/pdf/checklist-hair-salons--tl.pdf">checklist para sa hair salon</a> sa iyong lugar ng trabaho para ipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para magnegosyo. </p>
 
                   </div>
                 </div>
@@ -865,7 +865,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h3 id="higher-education"><span class="ca-gov-icon-read-book"></span> Mataas na edukasyon – na-update noong Oktubre 1, 2020</h3>
+            <h3 id="higher-education"><span class="ca-gov-icon-read-book"></span> Mas mataas na edukasyon – na-update noong Abril 9, 2020</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -880,6 +880,9 @@
 <p>Kaunti (dilaw)</p>
 <ul><li>Ang kapasidad para sa mga indoor na lecture at pagtitipon ng mga mag-aaral ay hanggang 55%</li><li>Posibleng bukas ang ilang kursong isinasagawa sa ilang indoor na lugar, tulad ng mga laboratoryo at studio art</li><li>Virtual na magsagawa ng mga aktibidad ng mag-aaral kung maaari</li></ul>
 <p>Ang pansamantalang <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--tl.pdf">gabay na ito para sa mga institusyon ng mas mataas na edukasyon</a> ay nagbibigay ng mga alituntuning makakatulong sa mga institusyon at sa kanilang mga komunidad na planuhin at paghandaan ang pagbalik sa personal na pagtuturo. Kasama rito ang pansamantalang gabay para sa palakasan sa kolehiyo para tumulong na magplano at maghanda sa pagsasanay at kumpetisyon. Suriin ang gabay at maghanda ng plano para mabawasan ang panganib at masuportahan ang mas ligtas na kapaligiran para sa mga mag-aaral, guro, manggagawa, at pamilya.</p>
+<p><strong>Mga manonood ng sports sa kolehiyo </strong></p>
+<p>Pinapayagan ang mga manonood ng mga outdoor na sports sa kolehiyo na pinapahintulutan alinsunod sa <a href="/tl/industry-guidance/#live-performances">gabay para sa mga outdoor na live event at performance</a>. </p>
+<p>Simula sa Abril 15, 2021, papayagan na ang mga manonood ng mga indoor na sports sa kolehiyo. Pinaplano na ang gabay na ito. Matuto tungkol sa mga paparating na pagbabago sa pamamagitan ng pagtingin sa <em>Mga Indoor na Seated na Live Event at Performance</em> sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Dimmer-Framework-September_2020.pdf">talahanayan ng mga tier ng aktibidad at negosyo</a> ng CDPH. Ina-update ang pansamantalang gabay para sa mga institusyon ng mas mataas na edukasyon para isama ang mga pagbabagong ito.</p>
 
                   </div>
                 </div>
@@ -929,7 +932,19 @@
 
 
 
-<div style="display:none;" class="js-qa js-qa-question">Pinapayagan ba ang mga sport sa kolehiyo?</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div style="display:none;" class="js-qa js-qa-question">Pinapayagan ba ang sports sa kolehiyo?</div>
 <div style="display:none;" class="js-qa js-qa-answer">Ang gabay para sa pagsasanay at kumpetisyon sa palakasan sa kolehiyo ay pansamantalang <a href="/tl/industry-guidance/#higher-education">gabay para sa kolehiyo</a>. </div>
 
 
