Update page - safer-economy.html 291d7dc88412286419115e28f99bbe311b072c1a

--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;April 12, 2021 at 2:01 AM</p>
+            <p class="small-text">Last updated&nbsp;April 12, 2021 at 8:41 AM</p>
           
         </div>
       </div>
@@ -186,7 +186,7 @@
 
 
 
-<p>California has reached 4 million vaccination doses in the vaccine equity metric. New Blueprint tier assignments were announced on April 6, 2021, with an effective date of April 7, 2021.</p>
+<p>California has reached 4 million vaccination doses in the Vaccine Equity Benchmark. New Blueprint tier assignments were announced on April 6, 2021, with an effective date of April 7, 2021.</p>
 
 
 
