--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;April 9, 2021 at 6:42 PM</p>
+            <p class="small-text">Last updated&nbsp;April 12, 2021 at 12:24 PM</p>
           
         </div>
       </div>
@@ -194,7 +194,7 @@
 
 
 <div>
-<p style="text-align:center"><a class="button-lightblue href="https://covid19.ca.gov/safer-economy/">Find what&#8217;s open in your area</a></p>
+<p style="text-align:center"><a class="button-lightblue href=" https:="" covid19.ca.gov="" safer-economy="" "="">Find what&#8217;s open in your area</a></p>
 </div>
 
 
@@ -609,7 +609,7 @@
 <p>Even with adherence to physical distancing, bringing members of different households together to engage in in-person protests and rallies carries an especially high risk of widespread transmission of COVID-19. &nbsp;Such gatherings may result in increased rates of infection, hospitalization, and death, especially among more vulnerable populations. In particular, activities like chanting, shouting, singing, and group recitation negate the risk-reduction achieved through 6 feet of physical distancing. For this reason, people engaging in these activities must wear face coverings at all times. </p>
 <p>Therefore, it is strongly recommended that those exercising their right to engage in political expression (including, for example, their right to petition the government) should utilize alternative channels, such as the many online and broadcasting platforms available in the digital age, in place of in-person gatherings.&nbsp;</p>
 <p>However, state public health directives do not prohibit in-person <em>outdoor</em> protests and rallies as long as you maintain a physical distance of at least 6 feet between persons or groups of persons from different households at all times. In addition, you must wear a face covering or mask. Local Health Officers are advised to consider appropriate limitations on outdoor attendance capacities, factoring their jurisdiction&#8217;s key COVID-19 health indicators. Failure to follow these requirements may result in an order to disperse or other enforcement action.&nbsp;</p>
-<p>In counties in the <a href="https://covid19.ca.gov/safer-economy/">Widespread (purple) tier</a>, indoor protests and rallies are not currently permitted. In other counties, state public health directives do not prohibit in-person&nbsp;<em>indoor</em> protests and rallies as long as&nbsp;(1) attendance is limited as required by the <a href="https://covid19.ca.gov/safer-economy">relevant restrictions</a> on places of worship and local health restrictions, (2)&nbsp;physical distancing of at least 6 feet between persons or groups of persons from different households is maintained at all times, and (3) singing and chanting activities are discontinued.&nbsp;Failure to follow these requirements may result in an order to disperse or other enforcement action.&nbsp;Masks and face coverings are required in compliance with CDPH directives.</p>
+<p>In-person <em>indoor </em>protests and rallies are permitted as long as (1) attendance is limited to 25% capacity in Widespread (purple) and Substantial (red) tiers and 50% capacity in Moderate (orange) and Minimal (yellow) tiers, (2) physical distancing of at least 6 feet between persons or groups of persons from different households is maintained at all times, and (3) singing and chanting activities are discontinued. Failure to follow these requirements may result in an order to disperse or other enforcement action. Masks and face coverings are required in compliance with CDPH directives.</p>
 <p>Participants must maintain a physical distance of at least 6 feet from any uniformed peace officers and other public safety personnel present, unless otherwise directed, and follow all other requirements and directives imposed by local health officers and law enforcement, or other applicable authorities.</p>
 <p>This limitation on attendance will be reviewed regularly. This review will assess the impacts of these imposed limits on public health and provide further direction as part of a phased-in restoration of gatherings that implicate the First Amendment.</p>
 
@@ -835,7 +835,7 @@
 <p>Ceremonies have restrictions on their setting or capacity, and indoor ceremonies are strongly discouraged, especially in the Widespread (purple) and Substantial (red) tiers due to high risk of transmission indoors. To check what’s permitted under your county’s tier status, look up “Weddings” in the <a href="https://covid19.ca.gov/safer-economy/">Blueprint for a Safer Economy</a>.</p>
 <p>Ceremonies should not allow for food or beverage for the guests, especially indoors.</p>
 <p>Wedding receptions are permitted, but also have restrictions on their capacity and setting based on your county’s tier status. For current conditions, look up “Weddings” in the <a href="https://covid19.ca.gov/safer-economy/">Blueprint for a Safer Economy</a>.</p>
-<p>While wedding receptions are currently permitted, consider safer options like sharing your wedding online via video conference (Zoom, Google Meet, or other platforms). This protects all your loved ones, especially those at high risk like seniors or people with chronic conditions. </p>
+<p>While wedding receptions are currently permitted,&nbsp;consider safer options like sharing your wedding online via video conference (Zoom, Google Meet, or other platforms). This protects all your loved ones, especially those at high risk like seniors or people with chronic conditions. </p>
 <p>See more details in guidance for <a href="https://covid19.ca.gov/industry-guidance/#worship">Places of worship and cultural ceremonies</a>.</p>
 
                   </div>
@@ -879,7 +879,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Gatherings for live musical, theatrical, and other artistic performances are permitted consistent with the <a href="https://covid19.ca.gov/industry-guidance/#live-performances">guidance for seated live audience events</a> or with the applicable sector guidance for the venue hosting such a performance (such as <a href="https://covid19.ca.gov/industry-guidance/#restaurants">restaurants, wineries, or bars</a>).   </p>
+            <p>Gatherings for live musical, theatrical, and other artistic performances are permitted consistent with the <a href="https://covid19.ca.gov/industry-guidance/#live-performances">guidance for seated live audience events</a> or with the applicable sector guidance for the venue hosting such a performance (such as <a href="https://covid19.ca.gov/industry-guidance/#restaurants">restaurants, wineries, or bars</a>). &nbsp;&nbsp;</p>
 
                   </div>
                 </div>
