--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;April 9, 2021 at 11:47 AM</p>
+            <p class="small-text">Last updated&nbsp;April 12, 2021 at 12:28 PM</p>
           
         </div>
       </div>
@@ -881,7 +881,7 @@
 <ul><li>Capacity for indoor lectures and student gatherings must be limited to 50%</li><li>Some courses conducted in certain indoor settings, like labs and studio arts, may be open at regular capacity</li><li>Conduct student activities virtually when possible</li></ul>
 <p>This interim <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--en.pdf">guidance for institutions of higher education</a> provides guidelines to help institutions and their communities plan and prepare to resume in-person instruction. It includes interim guidance for collegiate athletics to help plan for and prepare to resume training and competition. Review the guidance and prepare a plan to reduce the risk and support a safer environment for students, faculty, workers, and families.</p>
 <p><strong>Spectators of college sports&nbsp;</strong></p>
-<p>Spectators of outdoor college sports permitted by the guidance for outdoor <a href="https://covid19.ca.gov/industry-guidance/#live-performances">live events and performances</a> are allowed. </p>
+<p>Spectators of outdoor college sports permitted by the guidance for outdoor <a href="https://covid19.ca.gov/industry-guidance/#live-performances">live events and performances</a> are allowed.&nbsp;</p>
 <p>Beginning April 15, 2021, spectators of indoor college sports will be permitted. This guidance is forthcoming. Learn about the upcoming changes by looking at <em>Indoor Seated Live Events and Performances</em> in CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Dimmer-Framework-September_2020.pdf">activity and business tiers table</a>. The interim guidance for institutions of higher education is being updated to include these changes.</p>
 
                   </div>
@@ -1609,21 +1609,21 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h3 id="worship"><span class="ca-gov-icon-institute"></span> Places of worship and cultural ceremonies &#8211; updated April 1, 2021</h3>
+            <h3 id="worship"><span class="ca-gov-icon-institute"></span> Places of worship and cultural ceremonies &#8211; updated April 12, 2021</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>In response to recent judicial rulings, the interim capacity&nbsp;limits below are effective immediately. The linked guidance is in the process of being updated. All other restrictions in the guidance remain in place.&nbsp;</p>
+            <p>In response to recent judicial rulings, effective immediately, location and capacity limits on places of worship are not mandatory but are strongly recommended. The linked guidance is in the process of being updated. All other restrictions in the guidance remain in place.&nbsp;</p>
 <p><strong>Tier status</strong></p>
 <p>Widespread (purple)</p>
-<ul><li>Outdoor or indoor with modifications</li><li>Indoor activities are strongly discouraged and must be limited to 25% of capacity</li></ul>
+<ul><li>Outdoor or indoor with modifications</li><li>Indoor activities are strongly discouraged and should be limited to 25% of capacity</li></ul>
 <p>Substantial (red)</p>
-<ul><li>Indoor with modifications</li><li>Indoor activities must be limited to 25% of capacity</li></ul>
+<ul><li>Indoor with modifications</li><li>Indoor activities should be limited to 25% of capacity</li></ul>
 <p>Moderate (orange)</p>
-<ul><li>Indoor with modifications</li><li>Indoor activities must be limited to 50% of capacity</li></ul>
+<ul><li>Indoor with modifications</li><li>Indoor activities should be limited to 50% of capacity</li></ul>
 <p>Minimal (yellow)</p>
-<ul><li>Indoor with modifications</li><li>Indoor activities must be limited to 50% of capacity</li></ul>
+<ul><li>Indoor with modifications</li><li>Indoor activities should be limited to 50% of capacity</li></ul>
 <p><strong>Singing, chanting, and playing wind instruments</strong></p>
 <p>Singing, chanting, playing wind instruments, and similar activities are permitted subject to the restrictions below. Workers or volunteers who are providing vocal, instrumental, or other music for a service or ceremony but sit or stand separately from the visitors or congregants are “performers.” Additional or alternative modifications for performances may be required by the forthcoming Live Performances guidance.&nbsp;</p>
 <p>For outdoor activities:</p>
