Update page - equity.html 2105cabed06177e7ed375927d3ad3aff26d93fe4

--- a/equity/index.html
+++ b/equity/index.html
@@ -333,7 +333,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h3 id="what-weve-done">What we’ve done</h3>
+            <h3 class=" js-qa-exclude" id="what-weve-done">What we’ve done</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -379,7 +379,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h3 id="need-to-do">What we need to do</h3>
+            <h3 class=" js-qa-exclude" id="need-to-do">What we need to do</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
