Update page - essential-workforce.html ef6e43ff6364f6d10cdadb438ce2a1a3fd02253a

--- a/agency-response/index.html
+++ b/agency-response/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>State agency response</h1>
           
-            <p class="small-text">Last updated&nbsp;April 2, 2021 at 3:31 PM</p>
+            <p class="small-text">Last updated&nbsp;April 12, 2021 at 4:53 PM</p>
           
         </div>
       </div>
@@ -169,7 +169,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h2>Board of State and Community Corrections</h2>
+            <h2 class=" js-qa-exclude">Board of State and Community Corrections</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -192,7 +192,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h2>California Health and Human Services Agency</h2>
+            <h2 class=" js-qa-exclude">California Health and Human Services Agency</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
