--- a/essential-workforce/index.html
+++ b/essential-workforce/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Essential workforce</h1>
           
-            <p class="small-text">Last updated&nbsp;April 6, 2021 at 4:07 PM</p>
+            <p class="small-text">Last updated&nbsp;April 12, 2021 at 4:55 PM</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="health-care-public-health">1. Health Care / Public Health</h4>
+            <h4 class=" js-qa-exclude" id="health-care-public-health">1. Health Care / Public Health</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -233,7 +233,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="emergency-services">2. Emergency Services</h4>
+            <h4 class=" js-qa-exclude" id="emergency-services">2. Emergency Services</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -281,7 +281,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="food-and-agriculture">3. Food and Agriculture</h4>
+            <h4 class=" js-qa-exclude" id="food-and-agriculture">3. Food and Agriculture</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -329,7 +329,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="energy">4. Energy</h4>
+            <h4 class=" js-qa-exclude" id="energy">4. Energy</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -412,7 +412,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="water-and-wastewater">5. Water and Wastewater</h4>
+            <h4 class=" js-qa-exclude" id="water-and-wastewater">5. Water and Wastewater</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -455,7 +455,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="transportation-and-logistics">6. Transportation and Logistics</h4>
+            <h4 class=" js-qa-exclude" id="transportation-and-logistics">6. Transportation and Logistics</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -498,7 +498,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="communications-and-information-technology">7. Communications and Information Technology</h4>
+            <h4 class=" js-qa-exclude" id="communications-and-information-technology">7. Communications and Information Technology</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -551,7 +551,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="government-operations">8. Government Operations and other community-based essential functions</h4>
+            <h4 class=" js-qa-exclude" id="government-operations">8. Government Operations and other community-based essential functions</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -594,7 +594,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="critical-manufacturing">9. Critical Manufacturing</h4>
+            <h4 class=" js-qa-exclude" id="critical-manufacturing">9. Critical Manufacturing</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -632,7 +632,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="financial-services">10. Financial Services</h4>
+            <h4 class=" js-qa-exclude" id="financial-services">10. Financial Services</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -670,7 +670,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="chemical-and-hazardous-materials">11. Chemical and Hazardous Materials</h4>
+            <h4 class=" js-qa-exclude" id="chemical-and-hazardous-materials">11. Chemical and Hazardous Materials</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -708,7 +708,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="defense-industrial-base">12. Defense Industrial Base</h4>
+            <h4 class=" js-qa-exclude" id="defense-industrial-base">12. Defense Industrial Base</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -746,7 +746,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="industrial-commercial-residential-and-sheltering">13. Industrial, Commercial, Residential, and Sheltering Facilities and Services</h4>
+            <h4 class=" js-qa-exclude" id="industrial-commercial-residential-and-sheltering">13. Industrial, Commercial, Residential, and Sheltering Facilities and Services</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
