--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;April 9, 2021 at 7:51 PM</p>
+            <p class="small-text">Last updated&nbsp;April 12, 2021 at 4:52 PM</p>
           
         </div>
       </div>
@@ -288,7 +288,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h3 class=" js-qa js-qa-answer" id="Vaccinating-those-at-higher-risk">Individuals at higher risk</h3>
+            <h3 class=" js-qa js-qa-answer js-qa-exclude" id="Vaccinating-those-at-higher-risk">Individuals at higher risk</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -401,7 +401,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h3 id="Equity-framework"><strong>Equity for hardest-hit communities</strong></h3>
+            <h3 class=" js-qa-exclude" id="Equity-framework"><strong>Equity for hardest-hit communities</strong></h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
