Update page - contracts.html c237382db8bdde401dbec944c4bc19f37616c42a

--- a/contracts/index.html
+++ b/contracts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Released COVID-19 Response Contracts</h1>
           
-            <p class="small-text">Last updated&nbsp;April 12, 2021 at 1:26 PM</p>
+            <p class="small-text">Last updated&nbsp;April 12, 2021 at 5:02 PM</p>
           
         </div>
       </div>
@@ -169,7 +169,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h2>A-D:</h2>
+            <h2 class=" js-qa-exclude">A-D:</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -362,7 +362,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h2>E-J:</h2>
+            <h2 class=" js-qa-exclude">E-J:</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -490,7 +490,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h2>K-P:</h2>
+            <h2 class=" js-qa-exclude">K-P:</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -668,7 +668,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h2>Q-Z:</h2>
+            <h2 class=" js-qa-exclude">Q-Z:</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
